<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NxecoII</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="never">&quot;Never&quot;</string>
    <string name="every_day">&quot;Every Day&quot;</string>
    <string name="day_concat">&quot;, &quot;</string>
    <string name="creat_database">&quot;添加数据&quot;</string>
    <string name="query_data">&quot;查看数据&quot;</string>
    <string name="enable_alarm">"启用"</string>
    <string name="delete_alarm">"取消"</string>
    <string name="disable_alarm">"停用"</string>
    <string name="start_time">"开启时间"</string>
    <string name="end_time">"关闭时间"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="set_alarm">"设置计划"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="label">"时长"</string>
    <string name="queue_now1">Now we have</string>
    <string name="queue_now2">task(s) left to do.</string>
    <string name="wifi_text">Wifi</string>
    <string name="light_text">Brightness</string>
    <string name="date_text">Date &amp; Time</string>
    <string name="user_text">User</string>
    <string name="wlan_text">WLAN</string>
    <string name="connected">Connected</string>
    <string name="time_text">Time</string>
    <string name="date">Date</string>
    <string name="construction">Under construction ...</string>
    <string name="zone1">zone 1</string>
    <string name="average_temp">%d</string>
    <string name="raining">%d</string>
    <string name="adjust">%d</string>
    <string name="to_int">%d</string>
    <string name="zone_num">zone %d</string>
    <string name="H_M_S">%1$02d:%2$02d:%3$02d</string>
    <string name="M_S">%1$02d:%2$02d</string>
    <string name="wifi_empty_list_wifi_off">"To see networks available, turn Wi-Fi on."</string>
    <string name="wifi_empty_list_wifi_on">"Searching for WiFi networks..."</string>
    <string name="wifi_starting" >"Turning on Wi-Fi…"</string>
    <string name="wifi_stopping">"Turning off Wi-Fi…"</string>
</resources>
