<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    >

    <LinearLayout
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="vertical" 
        >

        <LinearLayout
            android:id="@+id/wifi_set"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal"
            android:background="@color/settings_menu_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wlan_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="150dp"
                android:textSize="26sp"
                android:textColor="@color/settings_menu"
                 />
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:background="@drawable/icn_wifi"
                />
        </LinearLayout>
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        
        <LinearLayout
            android:id="@+id/light_set"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal" 
            android:background="@color/settings_menu_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="100dp"
                android:textSize="26sp"
                android:textColor="@color/settings_menu"
                 />
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:background="@drawable/icn_light"
                />
            
        </LinearLayout>
        
         <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
         
        <LinearLayout
            android:id="@+id/date_set"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal" 
            android:background="@color/settings_menu_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="83dp"
                android:textSize="26sp"
                android:textColor="@color/settings_menu"
                 />
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:background="@drawable/icn_date"
                />
        </LinearLayout>
        
         <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
         
          <LinearLayout
            android:id="@+id/user_set"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal" 
            android:background="@color/settings_menu_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="170dp"
                android:textSize="26sp"
                android:textColor="@color/settings_menu"
                 />
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:background="@drawable/icn_user"
                />
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>
    
</LinearLayout>