<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="440dp"
        android:background="@drawable/swift_bg" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Remaining Time"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/prograssbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle_rotate" />

        <CheckBox
            android:id="@+id/chekBox"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="150dp"
            android:button="@xml/checkbox_background" />

        <TextView
            android:id="@+id/remainingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prograssbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!--<TextView-->
            <!--android:id="@+id/timeUnit"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/prograssbar"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:layout_toRightOf="@id/remainingTime"-->
            <!--android:text="Min"-->
            <!--android:textColor="#cdcdcd"-->
            <!--android:textSize="18sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/remainingTime"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/small_circel" />

        <TextView
            android:id="@+id/zones_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/remainingTime"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="zone"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_below="@id/remainingTime"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/alread_finish_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="min"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="648dp"
        android:layout_height="440dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Queue"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <ListView
                android:id="@+id/wait_schedule"
                android:layout_width="570dp"
                android:layout_height="272dp"
                android:layout_below="@id/title"
                android:layout_marginTop="10dp"
                android:divider="#CDCDCD"
                android:dividerHeight="1px" >
            </ListView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/queue_now1"
                    android:textColor="#cdcdcd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/waterin_left_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/queue_now2"
                    android:textColor="#cdcdcd"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_watering_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Add a watering"
                android:textColor="#ffffff"
                android:textSize="26sp" />

            <LinearLayout
                android:id="@+id/add_queue_background"
                android:layout_width="651dp"
                android:layout_height="375dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/add_queue_bg"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/btnStart"
                    android:layout_width="36dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:background="@xml/slide_btn"
                    android:button="@null" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/zones"
                        android:layout_width="500dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/zone_bg"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/zone_sign" />

                        <TextView
                            android:id="@+id/zones_select"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal"
                            android:text="@string/zone1"
                            android:textColor="@color/white"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/times"
                        android:layout_width="500dp"
                        android:layout_height="193dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:background="@drawable/time_bg"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/timer_con" />

                        <com.nxecoii.adapter.MyNumberPicker
                            android:id="@+id/time_picker_hour"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="75dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp"
                            android:text=":"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                        <com.nxecoii.adapter.MyNumberPicker
                            android:id="@+id/time_picker_min"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/finish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/btnCancel"
                            android:text="Cancel"
                            style="@style/watering_btn" />

                        <TextView
                            android:id="@+id/btnOk"
                            android:layout_marginLeft="4dp"
                            android:text="OK"
                            style="@style/watering_btn"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>